# IT_Companies_Agent

./: .gitignore  README.md
IT Companies Agent/: .env.example  .gitignore  README.md  devpulse.db  ingest_local.py  pyproject.toml  seed_db.py
IT Companies Agent/ai_workflow/: BACKLOG.md  DAILY_SCHEDULE.md  HANDOFF_STATE.md  MASTER_FLOW.md  README.md  SESSION_TEMPLATE.md
IT Companies Agent/ai_workflow/daily/: 2026-04-11.md  2026-04-12.md  2026-04-13.md
IT Companies Agent/app/: __init__.py  main.py
IT Companies Agent/app/agents/: architect.py  debugger.py  librarian.py  manager.py
IT Companies Agent/app/api/: __init__.py  router.py
IT Companies Agent/app/core/: config.py  db.py  dependencies.py  errors.py  security.py
IT Companies Agent/app/models/: db_models.py  entities.py
IT Companies Agent/app/repositories/: base.py  repo_store.py
IT Companies Agent/app/schemas/: common.py  debug.py  ingest.py  query.py  ticket.py  webhook.py
IT Companies Agent/docs/: AGENT_WORKFLOWS.md  AI_FEATURES.md  AI_FLOW.md  AI_GENERATION_PIPELINE.md  AI_MEMORY_SYSTEM.md  AI_MODELS_AND_LANGUAGES.md  AI_TECH_STACK.md  AI_WORKFLOW_TRACKER.md  API_CONTRACTS.md  BACKEND_ARCHITECTURE.md  DAILY_EXECUTION_PROTOCOL.md  DATABASE_SCHEMA.md  IMPLEMENTATION_PLAN.md  MARKET_AND_BUSINESS_CASE.md  PRD.md  SCALABILITY_PLAN.md  SECURITY_AND_AUTH.md  SYSTEM_ARCHITECTURE_DETAILED.md  UPCOMING_FEATURES.md  UX_UI_GUIDELINES.md
IT Companies Agent/frontend/: app.js  index.html  style.css
IT Companies Agent/migrations/: 001_initial_schema.sql
IT Companies Agent/tests/: test_backend_scaffold.py
(+22 files in other folders)
